--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Startup page to your favorite browser",
   "main": "index.js",
   "scripts": {
-    "build:prod": "webpack --config ./webpack.config.js",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "prod": "webpack --config ./webpack.config.js",
+    "dev": "webpack-dev-server --config ./webpack.dev.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
